--- a/src/app/tab-cards/tab-cards.page.html
+++ b/src/app/tab-cards/tab-cards.page.html
@@ -1,19 +1,21 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Cards</ion-title>
+        <form [formGroup]="searchForm">
+            <ion-item>
+                <ion-label display="floating">Suche</ion-label>
+                <ion-input id="name" formControlName="name" (keyup.enter)="triggerCardSearch()"></ion-input>
+            </ion-item>
+        </form>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <form [formGroup]="searchForm">
-        <ion-item>
-            <ion-label position="stacked">Suche</ion-label>
-            <ion-input id="name" formControlName="name" (keyup.enter)="triggerCardSearch()"></ion-input>
-        </ion-item>
-    </form>
+
     <div class="mtg-list" *ngIf="(cards$ | async).data as cards">
-        <div class="mtg-card-image" *ngFor="let card of cards">
-            <img *ngIf="card.imageUrl" [src]="card.imageUrl">
-        </div>
+        <ng-container *ngFor="let card of cards">
+            <div class="mtg-card-image" *ngIf="card.imageUrl">
+                <img [src]="card.imageUrl">
+            </div>
+        </ng-container>
     </div>
 </ion-content>
