--- a/src/global.scss
+++ b/src/global.scss
@@ -22,7 +22,7 @@
   white-space: pre-line;
 }
 .mtg-card-image {
-  padding: 6px;
+  padding: 6px 6px 0px 6px;
 }
 .mtg-card-image img {
   max-width: 223px;
