--- a/src/app/card-list/card-list.page.html
+++ b/src/app/card-list/card-list.page.html
@@ -1,7 +1,13 @@
-<ion-content>
-    <div class="card-list" *ngIf="cards$ | async as cards">
-        <div class="card" *ngFor="let card of cards.entities.cards | keyvalue:sortByName" (click)="showCardDetails(card.value)">
-            {{card.value.name}}
-        </div>
+<ion-content padding>
+    <div id="card-list" *ngIf="cards$ | async as cards">
+        <ion-card *ngFor="let card of cards.entities.cards | keyvalue:sortByName">
+            <ion-card-header>
+                <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+                <ion-card-title>{{card.value.name}}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+
+            </ion-card-content>
+        </ion-card>
     </div>
 </ion-content>
