--- a/src/app/quiz/quiz-card/quiz-card.component.html
+++ b/src/app/quiz/quiz-card/quiz-card.component.html
@@ -1,3 +1,4 @@
+<div text-center>
 <div id="quiz-card">
     <div class="mask mask-top"></div>
     <div class="mask mask-right"></div>
@@ -5,4 +6,5 @@
     <div class="mask mask-left"></div>
 
     <img  src="{{_card.imageUrl}}">
+</div>
 </div>
