--- a/src/app/quiz/quiz-card/quiz-card.component.scss
+++ b/src/app/quiz/quiz-card/quiz-card.component.scss
@@ -1,16 +1,26 @@
-#quiz-card {
+#quiz-card  {
   position: relative;
   width: 223px;
   height: 311px;
 }
 
-#quiz-card img {
+#quiz-card.masked img {
   width: 223px;
   height: 311px;
   filter: grayscale(100%);
 }
 
-.mask {
+#quiz-card.revealed img {
+  animation-name: remove-greyfilter;
+  animation-duration: 2s;
+}
+
+#quiz-card.revealed mask {
+  animation-name: remove-mask;
+  animation-duration: 2s;
+}
+
+#quiz-card .mask {
   position: absolute;
   opacity: 0.9;
   background-color: white;
@@ -43,4 +53,22 @@
   bottom: -1px;
   right: 0;
   height: 139px;
+}
+
+@keyframes remove-greyfilter {
+  from {
+    filter: grayscale(100%);
+  }
+  to {
+    filter: grayscale(0%);
+  }
+}
+
+@keyframes remove-mask {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
