--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,6 +1,6 @@
-<ion-backdrop *ngIf="revealCard"></ion-backdrop>
-<ion-content padding>
+<div id="prepare"></div>
 
+<ion-content padding>
     <ng-container *ngIf="cards">
         <ng-container *ngIf="currentCard">
 
@@ -55,10 +55,7 @@
                         {{r}}
                     </ion-button>
                 </div>
-
-
             </form>
-
         </ng-container>
     </ng-container>
 </ion-content>
