--- a/src/app/quiz/quiz.page.scss
+++ b/src/app/quiz/quiz.page.scss
@@ -17,3 +17,15 @@
 .rarity-segment > * {
   flex: 0 0 100px;
 }
+
+#result {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+#result .banner {
+
+}
