--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -39,7 +39,8 @@
                 <ion-list-header>TYPE</ion-list-header>
                 <div class="type-segment">
                     <ion-button *ngFor="let t of type" [ngClass]="t"
-                                color="{{isOptionSelected(t, 'type') > -1 ? 'success' : 'medium'}}" fill="outline"
+                                color="{{isOptionSelected(t, 'type') > -1 ? 'success' : 'medium'}}"
+                                fill="outline"
                                 (click)="toggleOption(t, 'type', true)">{{t}}
                     </ion-button>
                 </div>
