--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,4 +1,5 @@
 <ion-backdrop [visible]="true" *ngIf="showBackdrop"></ion-backdrop>
+<app-banner [valid]="quizForm.valid" *ngIf="showBackdrop"></app-banner>
 
 <ion-content padding>
     <ng-container *ngIf="cards">
