--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,5 +1,5 @@
 <ion-backdrop [visible]="true" *ngIf="showBackdrop"></ion-backdrop>
-<app-banner [valid]="quizForm.valid" *ngIf="showBackdrop"></app-banner>
+<app-banner [valid]="quizForm.valid" *ngIf="showBanner"></app-banner>
 
 <ion-content padding>
     <ng-container *ngIf="cards">
@@ -7,11 +7,11 @@
 
             <ion-grid>
                 <ion-row justify-content-center align-items-center>
-                    <app-quiz-card [card]="currentCard"></app-quiz-card>
+                    <app-quiz-card [card]="currentCard" (loaded)="onQuizCardLoaded()"></app-quiz-card>
                 </ion-row>
             </ion-grid>
 
-            <form [formGroup]="quizForm">
+            <form [formGroup]="quizForm" *ngIf="currentCardLoaded">
 
                 <ion-list-header>CONVERTED MANA COST</ion-list-header>
                 <div class="cmc-segment">
