visual feetback for correct answer

--- a/src/app/quiz/banner/banner.component.html
+++ b/src/app/quiz/banner/banner.component.html
@@ -1,7 +1,6 @@
 <div class="banner-wrapper">
-    <div class="banner" [@lightSpeedInOnEnter] [@fadeOutOnLeave]>
-        <div *ngIf="!valid" [@shakeOnEnter] class="valid"><ion-text color="danger">{{text}}</ion-text></div>
-        <div *ngIf="valid" [@rubberBandOnEnter] class="not-valid"><ion-text color="success">{{text}}</ion-text></div>
+    <div class="banner">
+        <ion-button (click)="handleRestart()">RESTART</ion-button>
     </div>
 </div>
 
