--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -1,13 +1,35 @@
 <p>Welche Farbe?</p>
-<div>
-<div class="colors">
-    <ion-button (click)="validate($event)">OK</ion-button>
-    <img class="W" src="../../assets/icon/W.svg" [ngClass]="isColorSelected('W') ? 'glow' : ''" (click)="toggleColor('W')">
-    <img class="G" src="../../assets/icon/G.svg" [ngClass]="isColorSelected('G') ? 'glow' : ''" (click)="toggleColor('G')">
-    <img class="U" src="../../assets/icon/U.svg" [ngClass]="isColorSelected('U') ? 'glow' : ''" (click)="toggleColor('U')">
-    <img class="B" src="../../assets/icon/B.svg" [ngClass]="isColorSelected('B') ? 'glow' : ''" (click)="toggleColor('B')">
-    <img class="R" src="../../assets/icon/R.svg" [ngClass]="isColorSelected('R') ? 'glow' : ''" (click)="toggleColor('R')">
-</div>
-</div>
+
+    <div class="colors">
+
+        <ion-button class="W" type="button" size="block" color="light" (click)="toggleColor('W')"
+                    [ngClass]="isColorSelected('W') ? 'glow' : ''">
+            <img src="../../assets/icon/W.svg">
+        </ion-button>
+
+        <ion-button class="G" type="button" size="block" color="light" (click)="toggleColor('G')"
+                    [ngClass]="isColorSelected('G') ? 'glow' : ''">
+            <img src="../../assets/icon/G.svg">
+        </ion-button>
+
+        <ion-button class="U" type="button" size="block" color="light" (click)="toggleColor('U')"
+                    [ngClass]="isColorSelected('U') ? 'glow' : ''">
+            <img src="../../assets/icon/U.svg">
+        </ion-button>
+
+        <ion-button class="B" type="button" size="block" color="light" (click)="toggleColor('B')"
+                    [ngClass]="isColorSelected('B') ? 'glow' : ''">
+            <img src="../../assets/icon/B.svg">
+        </ion-button>
+
+        <ion-button class="R" type="button" size="block" color="light" (click)="toggleColor('R')"
+                    [ngClass]="isColorSelected('R') ? 'glow' : ''">
+            <img src="../../assets/icon/R.svg">
+        </ion-button>
+
+        <ion-button (click)="validate($event)">OK</ion-button>
+
+    </div>
+
 
 
