--- a/src/global.scss
+++ b/src/global.scss
@@ -10,12 +10,21 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
+ion-modal.modal.banner {
+  --background: rgba(80, 80, 80, 0.7);
+}
+
+ion-backdrop {
+  opacity: 0.8;
+  background-color: #819fb1;
+}
+
 .mtg-toast {
-    opacity: 0.8;
-    width: 100%;
-    max-width: 100%;
-    margin: -8px;
-    height: 80px;
-    background-color: #eee;
-    border-radius: 0px;
+  opacity: 0.8;
+  width: 100%;
+  max-width: 100%;
+  margin: -8px;
+  height: 80px;
+  background-color: #eee;
+  border-radius: 0px;
 }
